--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   	   href="https://www.frontendmentor.io?ref=challenge"
                   	   target="_blank"
                   	   >Frontend Mentor</a
-                  	>. Coded by <a href="#">Val G</a>.
+                  	>. Coded by <a href="https://github.com/el-shredders">Val G</a>.
                   </p>
                </div>
             </footer>
