--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
       <title>Frontend Mentor | Todo app</title>
    </head>
-   <body class="preload-transitions">
+   <body class="preload-transitions" data-theme="darkTheme">
       <div class="main__container">
          <section class="todo">
             <header class="header">
                <section class="logo">
                   <h1 class="logo__title">TODO</h1>
                   <button class="btn btn--theme" id="theme-toggle">
-                     <img src="./img/icon-moon.svg" alt="change" />
-                     <img class="todo__elem--hide" src="./img/icon-sun.svg" alt="change" />
+                     <img class="todo__elem--hide" src="./img/icon-moon.svg" alt="change" />
+                     <img  src="./img/icon-sun.svg" alt="change" />
                   </button>
                </section>
                <div class="todo__header">
@@ -32,7 +32,7 @@
                </div>
             </header>
 
-            <main>
+            <div class="main">
                <ul class="todo__list" id="todo-list">
                   <!-- items added by JavaScript -->
                </ul>
@@ -53,7 +53,7 @@
                         <label class="btn btn--bold" for="completed">Completed</label>
                </div>
                </div>
-            </main>
+            </div>
 
             <footer>
                <div class="attribution">
@@ -69,7 +69,7 @@
             </footer>
          </section>
       </div>
-      <script type="text/javascript" defer>
+      <script type="text/javascript">
          document.addEventListener("DOMContentLoaded",function(){
            let node = document.querySelector('.preload-transitions');
            node.classList.remove('preload-transitions');
