--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <section class="todo">
             <header class="header">
                <section class="logo">
-                  <h1 class="logo__title">TODO</h1>
+                  <h2 class="logo__title">TODO</h2>
                   <button class="btn btn--theme" id="theme-toggle">
                      <img class="todo__elem--hide" src="./img/icon-moon.svg" alt="change" />
                      <img  src="./img/icon-sun.svg" alt="change" />
@@ -69,7 +69,7 @@
             </footer>
          </section>
       </div>
-      <script type="text/javascript">
+      <script>
          document.addEventListener("DOMContentLoaded",function(){
            let node = document.querySelector('.preload-transitions');
            node.classList.remove('preload-transitions');
