clear completed features + responsive

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
             <div class="main">
                <ul class="todo__list" id="todo-list">
                   <!-- items added by JavaScript -->
+                  
                </ul>
                <div class="todo__filters">
                   <div class="todo__filters__sides">
                      <p class="btn"><span id="items-left">5</span> item(s) left</p>
-                     <button class="btn btn--clear">Clear Completed</button>
+                     <button class="btn btn--clear" id="clear-completed">Clear Completed</button>
                   </div>
                   <div class="todo__filters__center">
                      
