--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                <div class="todo__header">
                   <div class="todo__circle">
                   </div>
-                  <input type="text" class="todo__input" id="todo-input" placeholder="Create a new todo..." />
+                  <label for="todo-input">Create a new todo</label>
+                  <input type="text" class="todo__input" name="todo-input"id="todo-input" placeholder="Create a new todo..." />
                </div>
             </header>
 
